EXTRA_DIST = \
	settingsupdate.conf settingsupdate.conf.in \
	tobackup.conf tobackup.conf.in

installdir = $(CONFIGDIR)

install_DATA = \
	bad_package_pattern.list.sample \
	cables.xml \
	encoding.conf \
	epglanguages.conf \
	providermap.xml \
	satellites.xml \
	settingsupdate.conf \
	terrestrial.xml \
	tobackup.conf
