installdir = $(CONTROLDIR)

install_DATA = \
	flash.start

# install_DATA += \
# 	audioplayer.start \
# 	audioplayer.end \
# 	deepstandby.on \
# 	deepstandby.off \
# 	flash.start \
# 	inactivity.on \
# 	movieplayer.start \
# 	movieplayer.end \
# 	neutrino.start \
# 	pictureviewer.start \
# 	pictureviewer.end \
# 	recording.timer \
# 	recording.start \
# 	recording.end \
# 	standby.on \
# 	standby.off
#
# install-data-hook:
# 	chmod 0755 $(DESTDIR)$(CONTROLDIR)/audioplayer.start
# 	chmod 0755 $(DESTDIR)$(CONTROLDIR)/audioplayer.end
# 	chmod 0755 $(DESTDIR)$(CONTROLDIR)/deepstandby.on
# 	chmod 0755 $(DESTDIR)$(CONTROLDIR)/deepstandby.off
# 	chmod 0755 $(DESTDIR)$(CONTROLDIR)/flash.start
# 	chmod 0755 $(DESTDIR)$(CONTROLDIR)/inactivity.on
# 	chmod 0755 $(DESTDIR)$(CONTROLDIR)/movieplayer.start
# 	chmod 0755 $(DESTDIR)$(CONTROLDIR)/movieplayer.end
# 	chmod 0755 $(DESTDIR)$(CONTROLDIR)/neutrino.start
# 	chmod 0755 $(DESTDIR)$(CONTROLDIR)/pictureviewer.start
# 	chmod 0755 $(DESTDIR)$(CONTROLDIR)/pictureviewer.end
# 	chmod 0755 $(DESTDIR)$(CONTROLDIR)/recording.timer
# 	chmod 0755 $(DESTDIR)$(CONTROLDIR)/recording.start
# 	chmod 0755 $(DESTDIR)$(CONTROLDIR)/recording.end
# 	chmod 0755 $(DESTDIR)$(CONTROLDIR)/standby.on
# 	chmod 0755 $(DESTDIR)$(CONTROLDIR)/standby.off
