installdir = $(CONTROLDIR)

install_SCRIPTS = \
	audioplayer.start \
	audioplayer.end \
	deepstandby.on \
	deepstandby.off \
	flash.start \
	inactivity.on \
	\
	movieplayer.start \
	movieplayer.end \
	neutrino.start \
	pictureviewer.start \
	pictureviewer.end \
	recording.timer \
	recording.start \
	recording.end \
	scan.start \
	scan.stop \
	standby.on \
	standby.off
