installdir = $(FONTDIR)

install_DATA = \
	LiberationSans-Bold.ttf \
	LiberationSans-BoldItalic.ttf \
	LiberationSans-Italic.ttf \
	LiberationSans-Regular.ttf \
	md_khmurabi_10.ttf \
	micron_bold.ttf \
	micron_italic.ttf \
	micron.ttf \
	neutrino.ttf \
	pakenham.ttf \
	DejaVuLGCSansMono-Bold.ttf \
	tuxtxt.ttf \
	tuxtxt.otb

if BOXMODEL_CS_HD2
install_DATA += UnDotum.ttf
endif
