installdir = $(DATADIR)/neutrino/icons

install_DATA = \
	0.png 1.png 2.png 3.png 4.png 5.png 6.png 7.png 8.png 9.png \
	16_9.png 16_9_gray.png \
	audio.png \
	fta.raw 16.raw b16.raw b2.raw b3.raw \
	bayrisch.png ch-baslerdeutsch.png ch-berndeutsch.png deutsch.png dutch.png \
	ellinika.png english.png francais.png french.png hungarian.png italiano.png \
	polski.png portugues.png romania.png russkij.png netherlands.png suomi.png svenska.png \
	language.png \
	blau.png gelb.png gruen.png rot.png \
	bookmarkmanager.png border_lr.png border_ul.png \
	ca.png \
	card.raw card_gray.raw card_green.raw \
	colors.png dbox.png dbox_small.png \
	dd.png dd_avail.png dd_gray.png ddfill.png \
	down.png up.png right.png left.png \
	error.png features.png file.png folder.png games.png \
	help.png help_small.png hidden.png home.png info.png \
	keybinding.png lcd.png local.png lock.png mainmenue.png \
	mounted.png movie.png \
	movieplayer.raw \
	mp3.png mute.png mute_small.png mute_zap_gray.png mute_zap_green.png \
	network.png not_mounted.png notyet.png numericpad.png ok.png power.png \
	radar.pal radar0.raw radar1.raw radar2.raw radar3.raw radar4.raw \
	radar5.raw radar6.raw radar7.raw radar8.raw radar9.raw \
	recording.png settings.png shell.png softupdate.png streaming.png \
	subt.png subt_gray.png timer.png video.png \
	volume.png volumebody.png volumeslider2.png volumeslider2alpha.png \
	volumeslider2blue.png volumeslider2green.png volumeslider2red.png \
	vtxt.png vtxt_gray.png \
	x_green.raw x_white.raw x_yellow.raw \
	mp3.jpg mp3-0.jpg mp3-1.jpg mp3-2.jpg mp3-3.jpg mp3-4.jpg mp3-5.jpg mp3-6.jpg mp3-7.jpg \
	radiomode.jpg scan.jpg shutdown.jpg start.jpg \
	net.raw net_gray.raw net_green.raw \
	biss.raw biss_gray.raw biss_green.raw biss_white.raw biss_yellow.raw \
	conax.raw conax_gray.raw conax_green.raw conax_white.raw conax_yellow.raw \
	cw.raw cw_gray.raw cw_green.raw cw_white.raw cw_yellow.raw \
	d_green.raw d_white.raw d_yellow.raw \
	ird.raw ird_gray.raw ird_green.raw ird_white.raw ird_yellow.raw \
	nagra.raw nagra_gray.raw nagra_green.raw nagra_white.raw nagra_yellow.raw \
	nds.raw nds_gray.raw nds_green.raw nds_white.raw nds_yellow.raw \
	power_white.raw pv_gray.raw powervu_green.raw powervu_white.raw powervu_yellow.raw \
	seca.raw seca_gray.raw seca_green.raw seca_white.raw seca_yellow.raw \
	via.raw via_gray.raw via_green.raw via_white.raw via_yellow.raw
