installdir = $(DATADIR)/neutrino/icons

install_DATA = \
	0.png 1.png 2.png 3.png 4.png 5.png 6.png 7.png 8.png 9.png \
	audio.png 16_9.png 16_9_gray.png \
	language.png bayrisch.png ch-baslerdeutsch.png ch-berndeutsch.png czech.png deutsch.png dutch.png bosanski.png \
	ellinika.png english.png francais.png french.png hungarian.png italiano.png norsk.png \
	polski.png portugues.png romania.png russkij.png nederlands.png slovak.png suomi.png svenska.png \
	blau.png gelb.png gruen.png rot.png \
	bookmarkmanager.png border_lr.png border_ul.png \
	ca.png ca2.png ca2_gray.png colors.png dbox.png dbox_small.png \
	dd.png dd_avail.png dd_gray.png ddfill.png \
	down.png up.png right.png left.png \
	error.png features.png file.png folder.png games.png \
	help.png help_small.png hidden.png home.png info.png \
	keybinding.png lcd.png local.png lock.png mainmenue.png \
	mounted.png movie.png \
	mp3.png mute.png mute_small.png mute_zap_gray.png mute_zap_green.png \
	network.png not_mounted.png notyet.png numericpad.png ok.png power.png \
	radar_red.pal radar.pal radar0.raw radar1.raw radar2.raw radar3.raw radar4.raw \
	radar5.raw radar6.raw radar7.raw radar8.raw radar9.raw movieplayer.raw rec.png recording.png \
	res_1920.png res_1280.png res_1440.png res_1080.png res_720.png res_704.png res_576.png \
	res_528.png res_544.png res_480.png res_382.png res_352.png res_288.png res_000.png \
	res_hd.png res_sd.png \
	settings.png shell.png softupdate.png streaming.png \
	subt.png subt_gray.png timer.png video.png \
	volume.png volumebody.png volumeslider2.png volumeslider2alpha.png \
	volumeslider2blue.png volumeslider2green.png volumeslider2red.png \
	vtxt.png vtxt_gray.png upnp.png \
	mp_play.png mp_b-skip.png mp_f-skip.png mp_pause.png \
	mp3.jpg mp3-0.jpg mp3-1.jpg mp3-2.jpg mp3-3.jpg mp3-4.jpg mp3-5.jpg mp3-6.jpg mp3-7.jpg \
	radiomode.jpg scan.jpg shutdown.jpg start.jpg \
	x_green.png x_white.png x_yellow.png \
	biss_green.png biss_white.png biss_yellow.png \
	conax_green.png conax_white.png conax_yellow.png \
	cw_green.png cw_white.png cw_yellow.png \
	d_green.png d_white.png d_yellow.png \
	ird_green.png ird_white.png ird_yellow.png \
	nagra_green.png nagra_white.png nagra_yellow.png \
	nds_green.png nds_white.png nds_yellow.png \
	powervu_green.png powervu_white.png powervu_yellow.png \
	seca_green.png seca_white.png seca_yellow.png \
	via_green.png via_white.png via_yellow.png
